<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hexapod</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">连接</string>
	<string name="videoport">Port:</string>
    <string name="videoip">Ip地址:</string>
  	<string name="ctrlport">SoketPort:</string>
   	<string name="videoport_hint">端口1000到65535</string>
    <string name="port">8083</string>
    <string name="ip">192.168.8.1</string>
    <string name="ip_hint">请输入IP</string>
    <string name="Socketport">2001</string>
    <string name="Socketport_hint">和Socket服务器端口一致</string>
</resources>
